--- a/.github/workflows/stage_test.yaml
+++ b/.github/workflows/stage_test.yaml
@@ -32,7 +32,7 @@ jobs:
     name: 🧪 Unit Tests and 🔨 Build
     runs-on: ubuntu-latest
 
-    if: github.event_name == 'pull_request' || (github.ref == 'refs/heads/test-deploy' && github.event_name == 'push')
+    if: github.event_name == 'pull_request' || (github.ref == 'refs/heads/Master' && github.event_name == 'push')
 
     steps:
       - name: Set up Go 1.19
