update app name

--- a/.github/workflows/stage_test.yaml
+++ b/.github/workflows/stage_test.yaml
@@ -7,9 +7,9 @@ on:
     branches: [  Master ]
 
 env:
-  APP_NAME: order-data
-  NAMESPACE: samp
-  CLUSTER_NAME: nginx-dev
+  APP_NAME: cloud-infra
+  NAMESPACE: sample
+  CLUSTER_NAME: dashboards-dev
   CLUSTER_PROJECT: zs-devops
   GCR_PROJECT: zs-devops
   STAGE_DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
